[gd_scene load_steps=2 format=3 uid="uid://j6m8b4msvkad"]

[ext_resource type="Script" path="res://UI/gongbutable/gongbu_item.gd" id="1_d1tdh"]

[node name="gongbuItem" type="HBoxContainer"]
script = ExtResource("1_d1tdh")

[node name="number" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "装配序号"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "装配名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="department" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "装配部门"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额"
horizontal_alignment = 1
vertical_alignment = 1

[node name="demand" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "装配要求"
horizontal_alignment = 1
vertical_alignment = 1

[node name="control" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="delete" type="Button" parent="control"]
layout_mode = 2
text = "删除"

[node name="edit" type="Button" parent="control"]
layout_mode = 2
text = "编辑"

[node name="EditGongbuDialog" type="AcceptDialog" parent="."]
initial_position = 2
title = "编辑工步"
size = Vector2i(300, 123)

[node name="VBoxContainer" type="VBoxContainer" parent="EditGongbuDialog"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 179.0
grow_horizontal = 2

[node name="Name" type="HBoxContainer" parent="EditGongbuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="EditGongbuDialog/VBoxContainer/Name"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "装配名称:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEdit" type="LineEdit" parent="EditGongbuDialog/VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入名称"

[node name="Department" type="HBoxContainer" parent="EditGongbuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Department" type="Label" parent="EditGongbuDialog/VBoxContainer/Department"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "装配部门"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DepartmentEdit" type="LineEdit" parent="EditGongbuDialog/VBoxContainer/Department"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Demand" type="HBoxContainer" parent="EditGongbuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Demand" type="Label" parent="EditGongbuDialog/VBoxContainer/Demand"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "装配要求:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DemandEdit" type="LineEdit" parent="EditGongbuDialog/VBoxContainer/Demand"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[node name="Time" type="HBoxContainer" parent="EditGongbuDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Time" type="Label" parent="EditGongbuDialog/VBoxContainer/Time"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "工时定额:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeEdit" type="LineEdit" parent="EditGongbuDialog/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "请输入"

[connection signal="pressed" from="control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="control/edit" to="." method="_on_edit_pressed"]
[connection signal="confirmed" from="EditGongbuDialog" to="." method="_on_edit_gongbu_dialog_confirmed"]
